--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -1,5 +1,5 @@
 # Define the root logger with appender file  
-log = /bolt/logs/
+log = /tab/logs/
 log4j.rootLogger = DEBUG, FILE  
   
 # Define the file appender  
