[062120231029]: updated for jenkins run

--- a/config/RunConfig.properties
+++ b/config/RunConfig.properties
@@ -1,4 +1,8 @@
-test.suite.file.path=C:/Users/Abc/Documents/abc.xlsx
-test.run.id.list=2,1,3
+#executing test suite file path
+test.suite.file.path=C:/Documents/Bolt/altimetrik.xlsx
+#executing test run id's
+test.run.id.list=1,2,3
+#test run driver browser chrome or edge
 test.run.driver.browser=chrome
+#test run wait timeout
 test.run.wait.timeout=120
