[062220230627]: updated for headless run

--- a/config/RunConfig.properties
+++ b/config/RunConfig.properties
@@ -1,8 +1,10 @@
 #executing test suite file path
-test.suite.file.path=C:/Documents/Bolt/altimetrik.xlsx
+test.suite.file.path=C:/Users/Tab/Documents/altimetrik.xlsx
 #executing test run id's
 test.run.id.list=1,2,3
-#test run driver browser chrome or edge
+#test run driver browser chrome/edge, default is chrome
 test.run.driver.browser=chrome
-#test run wait timeout
-test.run.wait.timeout=120
+#test run wait timeout in seconds
+test.run.wait.timeout=30
+#test run browser mode true/false, default is false
+test.run.driver.headless=
