--- a/config/RunConfig.properties
+++ b/config/RunConfig.properties
@@ -1,5 +1,6 @@
 #executing test suite file path
-test.suite.file.path=C:/Users/Tab/Documents/altimetrik.xlsx
+#test.suite.file.path=C:/Users/Tab/Documents/altimetrik.xlsx
+test.suite.file.path=/Users/ssamal/Downloads/altimetrik.xlsx
 #executing test run id's
 test.run.id.list=1,2,3
 #test run driver browser chrome/edge, default is chrome
