--- a/.classpath
+++ b/.classpath
@@ -24,6 +24,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="tab_accelerator.jar"/>
+	<classpathentry kind="lib" path="bolt.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
